--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,25 @@
 asgiref==3.10.0
+boto3==1.42.4
+botocore==1.42.4
+cffi==2.0.0
+charset-normalizer==3.4.4
+cryptography==46.0.3
 Django==5.2.7
 django-environ==0.12.0
+django-storages==1.14.6
+jmespath==1.0.1
+pdfminer.six==20251107
+pdfplumber==0.11.8
+pillow==12.0.0
 psycopg==3.2.12
 psycopg-binary==3.2.12
+pycparser==2.23
+pypdfium2==5.1.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+s3transfer==0.16.0
+six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.15.0
 tzdata==2025.2
-pdfplumber>=0.11
+urllib3==2.6.0
